test/compile-fail/call-invalid-keyword.as
def method(x: int, y: int) -> int {
  return x * y;
}

method(z=20);  // error
