test/compile-fail/call-invalid-keyword.stderr
[0;37mtest/compile-fail/call-invalid-keyword.as:5.8-12: [0;31merror: [1;37m'z' is an invalid keyword argument for this function[0m
